@@ -15,6 +15,10 @@ Add groovyc taskdef to the GantBuilder so the user doesn't have to.
 
 Tidies up the tool and target set classes to ensure that both "<<" and "** *" operators work correctly.
 
+Stop the binding entry target from being redefined.
+
+Remove the task entry in the binding.  It was deprecated and advertised as being removed in v1.3.
+
 
 1.3.0 ( r9298, tagged as 9302 )
 -------------------------------
